feat: add repository methods definition (WIP)

--- a/ExpensesService/ExpensesService/appsettings.json
+++ b/ExpensesService/ExpensesService/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDB": {
+    "DatabaseName": "",
+    "ContainerName":  "",
+    "Account": "",
+    "Key":  "" 
+  }
 }
