feat: add repository implementation

--- a/ExpensesService/ExpensesService/appsettings.json
+++ b/ExpensesService/ExpensesService/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "CosmosDB": {
-    "DatabaseName": "",
-    "ContainerName":  "",
-    "Account": "",
-    "Key":  "" 
+    "DatabaseName": "<DATABASE_NAME>",
+    "ContainerName": "<CONTAINER_NAME>",
+    "AccountEndpoint": "<ACCOUNT_ENDPOINT>",
+    "Key": "<KEY>"
   }
 }
