feat: add authentication to API

--- a/ExpensesService/ExpensesService/appsettings.json
+++ b/ExpensesService/ExpensesService/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Authentication": {
+    "Username": "<USERNAME>",
+    "Password": "<PASSWORD>"
+  },
   "CosmosDB": {
     "DatabaseName": "<DATABASE_NAME>",
     "ContainerName": "<CONTAINER_NAME>",
